@@ -1,3 +1,9 @@
+2011-04-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* shr.el (shr-strike-through): New face.
+	(shr-tag-s): Use it to provide <s> support.
+	(shr-tag-s): Remove duplicate definition.
+
 2011-04-25  Teodor Zlatanov  <tzz@lifelogs.com>
 
 	* gnus-registry.el (gnus-registry-ignore-group-p): Don't call
